[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["bashar adel taamneh <bashartaamneh55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
